# smartbot_ws

./: frames_2025-11-13_19.47.11.gv  frames_2025-11-14_11.58.01.gv  launch_output.txt
install/: local_setup.sh  setup.sh
install/smartbot_description/share/smartbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/smartbot_description/share/smartbot_description/cmake/: smartbot_descriptionConfig-version.cmake  smartbot_descriptionConfig.cmake
install/smartbot_description/share/smartbot_description/environment/: ament_prefix_path.dsv  path.dsv
install/smartsort_controllers/share/smartsort_controllers/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smartsort_controllers/share/smartsort_controllers/environment/: path.dsv  (+1 more)
install/smartsort_robot/lib/smartsort_robot/: gripper_controller  robot_brain
install/smartsort_robot/share/smartsort_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/smartbot_description/: CMakeLists.txt  smartbot.urdf.xacro
src/smartsort_controllers/: CMakeLists.txt  package.xml
src/smartsort_controllers/config/: controller_manager.yaml
src/smartsort_robot/: package.xml  setup.cfg  setup.py
src/smartsort_robot/launch/: warehouse.launch.py
src/smartsort_robot/smartsort_robot/: robot_brain.py
src/smartsort_robot/urdf/: smartsort_gazebo.xacro  smartsort_robot.urdf.xacro  smartsort_ros2_control.xacro
(+12 files in other folders)
